# brave-core

app/: brave_generated_resources.grd  brave_main_delegate.cc  settings_strings.grdp
browser/: BUILD.gn  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_profile_prefs.cc  brave_profile_prefs_browsertest.cc  brave_tab_helpers.cc  browser_context_keyed_service_factories.cc  disabled_blink_apis_browsertest.cc
browser/autocomplete/: brave_autocomplete_scheme_classifier.cc
browser/extensions/: BUILD.gn
browser/infobars/: BUILD.gn
browser/ipfs/: content_browser_client_helper_unittest.cc  ipfs_tab_helper.cc
browser/net/: BUILD.gn  brave_site_hacks_network_delegate_helper.cc  ipfs_redirect_network_delegate_helper_unittest.cc  url_context.cc  url_context.h
browser/profiles/: brave_profile_manager.cc  brave_profile_manager_browsertest.cc
browser/ui/: BUILD.gn
common/: network_constants.cc
components/definitions/: chromel.d.ts  newTab.d.ts  (+2 more)
components/private_channel/: BUILD.gn
components/private_channel/browser/: BUILD.gn
components/private_channel/rust/ffi/: BUILD.gn  cbindgen.toml
components/private_channel/rust/ffi/private-channel/: BUILD.gn
patches/: chrome-BUILD.gn.patch  chrome-VERSION.patch  chrome-browser-download-android-java-src-org-chromium-chrome-browser-download-DownloadManagerBridge.java.patch  chrome-browser-safe_browsing-download_protection-check_client_download_request.h.patch  third_party-blink-renderer-modules-storage-storage_namespace.h.patch
test/: BUILD.gn
utility/: BUILD.gn
(+83 files in other folders)
