import("//brave/components/private_channel/buildflags.gni")
import("//build/buildflag_header.gni")

buildflag_header("buildflags") {
  header = "buildflags.h"
  flags = [ "PRIVATE_CHANNEL_ENABLED=$private_channel_enabled" ]
}

source_set("private_channel") {
  public_deps = [ ":buildflags" ]

  sources = [
    "client_private_channel.cc",
    "client_private_channel.h",
    "utils.cc",
    "utils.h",
  ]

  deps = [
    "//brave/components/resources",
    "//services/network/public/cpp",
    "//services/network/public/mojom",
    "//ui/base",  # For ResourceBundle, consider getting rid of this?
    "//url",
  ]
}
