import("//brave/build/config.gni")

source_set("browser") {
  public_deps = [
    ":buildflags",
    "//brave/build/rust",
  ]

  sources = [
    "constants.cc",
    "constants.h",
    "private_channel.cc",
    "private_channel.h",
    "request_utils.cc",
    "request_utils.h",
  ]

  deps = [
    "//base",
    "//content/public/browser",
    "//extensions/browser",
  ]
}
